css/custom.css
nav {
    font-weight: bold;
    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
}


body {
    background-color: rgba(245, 241, 239 );
}

.navbar-toggler {
    display: flex !important;
    border: none;
  }
  
  .navbar-toggler-icon {
    display: block;
    width: 1.5em;
    height: 1.5em;
    background-image: none !important;
  }
  
  .navbar-toggler-icon::before {
    content: '\2261';
    font-size: 1.5em;
    font-weight: bold;
    color: inherit;
  }

#brand {
  color: rgba(239, 123, 14);
}


#branding {
  height: auto;
}

#branding img {
  height: 50vh;
}

#orderpickup {
  background-color: rgba(239, 123, 14);
  font-weight: bold;
  border-color: white;
}

#branding p {
  margin-top: 10px;
}

.tiny-grid {
  width: auto;
}
.tiny-grid img {
  width: 100%;
  height: 25vh;
  object-fit: cover;
}

#ordernow {
  background-color: rgba(239, 123, 14);
  font-weight: bold;
  border-color: white;
}

